--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^2.4",
         "maatwebsite/excel": "^3.1",
         "mailjet/laravel-mailjet": "^3.0",
+        "symfony/http-client": "^5.4",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
